#67 Booking Modify
See merge request plugin-fall/team5/atb_plugin_backend!84